Closed
Bug 984789
Opened 8 years ago
Closed 8 years ago
FileHandle: Eliminate nsIFileStorage
Categories
(Core :: DOM: Core & HTML, defect)
Core
DOM: Core & HTML
Tracking
()
RESOLVED
FIXED
mozilla32
People
(Reporter: janv, Assigned: janv)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
49.80 KB,
patch
|
bent.mozilla
:
review+
|
Details | Diff | Splinter Review |
No description provided.
Assignee | ||
Comment 1•8 years ago
|
||
Assignee: nobody → Jan.Varga
Status: NEW → ASSIGNED
Attachment #8410052 -
Flags: review?(bent.mozilla)
Comment on attachment 8410052 [details] [diff] [review] patch Review of attachment 8410052 [details] [diff] [review]: ----------------------------------------------------------------- Looks good, thanks! ::: dom/filehandle/FileHandle.cpp @@ +69,5 @@ > FileHandle::~FileHandle() > { > } > > +#if 0 I'd rather not leave #if 0 code around. Let's just remove it for now, we can always get it back later. ::: dom/indexedDB/IDBFileHandle.cpp @@ +5,5 @@ > * You can obtain one at http://mozilla.org/MPL/2.0/. */ > > #include "IDBFileHandle.h" > > +#include "mozilla/Assertions.h" You already added this to the .h @@ +40,5 @@ > : FileHandle(aOwner) > { > } > > +NS_IMPL_CYCLE_COLLECTION_INHERITED_1(IDBFileHandle, FileHandle, mDatabase) Just FYI, no need for the _1 now ::: dom/quota/QuotaManager.cpp @@ +2415,5 @@ > indexes.AppendElement(index); > } > } > > + StorageMatcher<nsTArray<nsCOMPtr<nsIOfflineStorage> > > liveStorages; Nit: >>>, below too.
Attachment #8410052 -
Flags: review?(bent.mozilla) → review+
Assignee | ||
Comment 3•8 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/ef60f8aa9a01
https://hg.mozilla.org/mozilla-central/rev/ef60f8aa9a01
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla32
Updated•3 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•