Bug 984789 - FileHandle: Eliminate nsIFileStorage; r=bent